Fixed theme flickering

--- a/src/sass/global/_base.scss
+++ b/src/sass/global/_base.scss
@@ -17,6 +17,11 @@ html {
 }
 
 body {
+    display: none;
+}
+
+body[id*="dark"],
+body[id*="light"] {
     display: flex;
     align-items: center;
     justify-content: center;
